find fretCoord